[project]
name = "mloc"
version = "0.1.0"
description = "Modular LLM Operations Container - Distributed system for LLM inference and training"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
    "vllm>=0.10.1.1",
    "datasets>=4.0.0",
    "trl>=0.8.0",
    "qdrant-client>=1.15.1",
    "fastembed>=0.7.3",
]
